client: support unethical api (1.1.1)